--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,159 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+:root 
+{
+  background-color: #090B1A;
+  color:white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+*
+{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
+@font-face 
+{
+  font-family: 'inter-400';
+  src: url('/Fonts/Inter-Regular.ttf');
+}
+@font-face 
+{
+  font-family: 'inter-700';
+  src: url('/Fonts/Inter-Bold.ttf');
+}
+.app-container 
+{
+  height: 65vh;
+  width: 72vw;
+  display: flex;
+  border-radius: 10px;
+
+}
+.app-left 
+{
+  width: 50%;;
+  background-color: #1B1938;
+  padding:55px;
+  border-radius: 10px 0 0 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap:40px;
+
+}
+.app-left h1 
+{
+  font-family: 'inter-700';
+  width: 100%;
+  font-size: 2.1vw;
+}
+.app-left h1 span 
+{
+  color:#AA5CDB;
+}
+.app-left p
+{
+  font-family: 'inter-400';
+  color:gray;
+  line-height: 4vh;
+  font-size: 1.1vw;
+}
+.app-left-inner 
+{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.div-element
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+.div-element p 
+{
+  color:gray;
+  font-family: 'inter-700';
+  font-size: 0.7vw;
+  letter-spacing: 1px;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.div-element h1 
+{
+  font-size: 1.9vw;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.app-right 
+{
+  background-image: url('/images/image-header-desktop.jpg');
+  width: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100vh;
+  border-radius: 0 10px 10px 0;
+  position: relative;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.overlay
+{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #6814a0;
+  opacity: 0.6;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 660px)
+{
+  *
+  {
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
   }
-  to {
-    transform: rotate(360deg);
+  :root 
+  {
+    overflow: scroll;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .app-container 
+  {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    height: 200vh;
+    width: 150vw;
+    padding: 20px;
+    border-radius: 10px;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  .app-left 
+  {
+    border-radius: 0 0 10px 10px;
+  }
+  .app-left h1 
+  {
+    font-size: 5vw;
+    text-align: center;
+  }
+  .app-left p 
+  {
+    font-size: 2.5vw;
+    text-align: center;
+  }
+  .app-right
+  {
+    width: 50%;
+    height: 50%;
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  .app-left-inner
+  {
+    flex-direction: column;
+    gap: 20px;
+  }
 }
